Fix wrong color dark theme page-link

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,11 +25,11 @@ body.dark-theme a:not(.page-link)::not(.site-title):visited {
     color: #2074a5;
 }
 
-body.dark-theme a.page-link:visited {
+body.dark-theme a.page-link {
     color: #fff;
 }
 
-body.dark-theme a.site-title:visited {
+body.dark-theme a.site-title {
     color: #fff;
 }
 
